--- a/desafio1/index.html
+++ b/desafio1/index.html
@@ -31,8 +31,8 @@
         </svg>
         <span>Apenas letras minúsculas e sem acento.</span>
       </div>
-        <button>Criptografar</button>
-        <button>Descriptografar</button>
+        <button class="criptografar">Criptografar</button>
+        <button class="descriptografar">Descriptografar</button>
       </div>
     </div>
     <div class="resultado">
