--- a/desafio1/index.html
+++ b/desafio1/index.html
@@ -32,7 +32,7 @@
           <span>Apenas letras minúsculas e sem acento.</span>
         </div>
         <button class="criptografar" onclick="criptografar()">Criptografar</button>
-        <button class="descriptografar">Descriptografar</button>
+        <button class="descriptografar" onclick="descriptografar()">Descriptografar</button>
       </div>
     </div>
     <div class="resultado">
