--- a/alura_books/index.html
+++ b/alura_books/index.html
@@ -276,6 +276,8 @@
   </footer>
 
   <script src="./app/main.js"></script>
+  <script src="./app/metodoForEatch.js"></script>
+  <script src="./app/metodoMap.js"></script>
 </body>
 
 </html>
