--- a/alura_books/index.html
+++ b/alura_books/index.html
@@ -278,6 +278,7 @@
   <script src="./app/main.js"></script>
   <script src="./app/metodoForEatch.js"></script>
   <script src="./app/metodoMap.js"></script>
+  <script src="./app/metodoFilter.js"></script>
 </body>
 
 </html>
