--- a/alura_books/index.html
+++ b/alura_books/index.html
@@ -279,6 +279,7 @@
   <script src="./app/metodoForEatch.js"></script>
   <script src="./app/metodoMap.js"></script>
   <script src="./app/metodoFilter.js"></script>
+  <script src="./app/metodoSort.js"></script>
 </body>
 
 </html>
